<?xml version="1.0"?>
<package format="3">
  <name>vins_px4_bridge</name>
  <version>0.1.0</version>
  <description>Bridge VINS odom to PX4 and drift monitoring</description>
  <maintainer email="patwardhandevang@gmail.com.com">Devang</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>px4_msgs</depend>

  <exec_depend>rclpy</exec_depend>
</package>

